--- a/ben-portfolio/index.html
+++ b/ben-portfolio/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
+    <link rel="icon" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
       content="Benoush Valentine's Portfolio - Frontend Developer, Generative AI Developer, and Prompt Engineer"
     />
-    <title>[Your Name]'s Portfolio</title>
+    <title>Benoush Valentine's Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
