Your commit message

--- a/ben-portfolio/index.html
+++ b/ben-portfolio/index.html
@@ -4,11 +4,19 @@
     <meta charset="UTF-8" />
     <link rel="icon" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Theme color for browsers and mobile devices -->
+    <meta name="theme-color" content="#121212" />
+    <!-- Enable standalone (web app) mode on mobile devices -->
+    <meta name="mobile-web-app-capable" content="yes" />
+    <!-- Optional: For iOS, you can include a status bar style -->
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
     <meta
       name="description"
       content="Benoush Valentine's Portfolio - Frontend Developer, Generative AI Developer, and Prompt Engineer"
     />
     <title>Benoush Valentine's Portfolio</title>
+    <!-- Optionally include your main stylesheet if not bundled -->
+    <!-- <link rel="stylesheet" href="/src/index.css" /> -->
   </head>
   <body>
     <div id="root"></div>
